--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+*.iml
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+
 # Built application files
 *.apk
 *.ap_
@@ -30,3 +44,10 @@ proguard/
 
 # Android Studio captures folder
 captures/
+
+.idea
+
+*.iml
+/local.properties
+.DS_Store
+.externalNativeBuild
