--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.ProductsActivity"></activity>
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".activities.CategoriesActivity"></activity>
+        <activity android:name=".activities.ProductsActivity" />
+        <activity android:name=".activities.CheckActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
